<resources>

    <string name="about">Über</string>
    <string name="app_description">Short description about this app.</string>
    <string name="app_name">TellsTrack 2.0</string>
    <string name="developer">Entwickler</string>
    <string name="timepicker">Datumauswahl</string>

    <string name="timetable">Fahrplan</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>

    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>
    <string name="Arrival">Ankunft</string>
    <string name="Departure">Abfahrt</string>

    <string name="richtung">Richtung</string>
    <string name="gl">Gl.</string>
    <string name="streckenabschnitte">Streckenabschnitte</string>
    <string name="abkTag">"Tg. "</string>

    <string name="From">Von</string>
    <string name="To">Nach</string>
    <string name="search_connection">Verbindung suchen</string>
    <string name="Date">Datum</string>
    <string name="ConnectionDetails">Streckendetails</string>
    <string name="product">Produkt</string>
    <string name="version">Version 1.0</string>
    <string name="team">Team</string>
    <string name="time">Zeit</string>
    <string name="travel_time">Wann fahren Sie?</string>
    <string name="normal">Normal</string>
    <string name="terrain">Gelände</string>
    <string name="satellite">Satellit</string>
    <string name="hybrid">Hybrid</string>


</resources>
